<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    tools:context=".MainQuestionnaireActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_accent_color"
            android:padding="15dp"
            android:textAlignment="center"
            android:gravity="center"
            android:text="@string/Starter_survey_title"
            android:textColor="@color/White"
            android:textStyle="bold"
            android:textSize="35sp"/>


        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingLeft="5dp"
            android:textStyle="bold"
            android:textColor="@color/textPrimaryColor"
            android:textAlignment="center"
            android:text="@string/Question_CampingExperience"
            android:textSize="27sp"
            android:layout_marginBottom="10dp"
            />

        <RadioGroup
            android:id="@+id/experiencedRadioGroup"
            android:onClick="onClick"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radioButtonAnswerBeginner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:textSize="18sp"
                android:textStyle="bold"
                android:buttonTint="@color/colorAccent"
                android:textColor="@color/colorAccent"
                android:onClick="onClickRadioButton"
                android:text="@string/Answer_Beginner" />

            <RadioButton
                android:id="@+id/radioButtonAnswerIntermediate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:textSize="18sp"
                android:textStyle="bold"
                android:buttonTint="@color/colorAccent"
                android:textColor="@color/colorAccent"
                android:onClick="onClickRadioButton"
                android:text="@string/Answer_Intermediate" />

            <RadioButton
                android:id="@+id/radioButtonAnswerExpert"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:textSize="18sp"
                android:textStyle="bold"
                android:buttonTint="@color/colorAccent"
                android:textColor="@color/colorAccent"
                android:onClick="onClickRadioButton"
                android:text="@string/Answer_Expert" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingLeft="5dp"
            android:textStyle="bold"
            android:textColor="@color/textPrimaryColor"
            android:textAlignment="center"
            android:layout_marginBottom="10dp"
            android:text="@string/Question_KindOfCamper"
            android:textSize="27sp"/>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">


        <CheckBox
            android:id="@+id/CheckBoxAnswerBackyardCamping"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:textStyle="bold"
            android:onClick="onClick"
            android:buttonTint="@color/colorAccent"
            android:text="@string/Answer_BackyardCamping" />

        <CheckBox
            android:id="@+id/CheckBoxAnswerAdventureCamping"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:textStyle="bold"
            android:onClick="onClick"
            android:buttonTint="@color/colorAccent"
            android:text="@string/Answer_AdventureCamping" />

        <CheckBox
            android:id="@+id/CheckBoxAnswerCarCamping"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:textStyle="bold"
            android:onClick="onClick"
            android:buttonTint="@color/colorAccent"
            android:text="@string/Answer_CarCamping" />

        <CheckBox
            android:id="@+id/CheckBoxButtonAnswerBicycleCamping"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:textStyle="bold"
            android:onClick="onClick"
            android:buttonTint="@color/colorAccent"
            android:text="@string/Answer_BicycleCamping" />

        <CheckBox
            android:id="@+id/CheckBoxButtonAnswerTentCamping"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:textStyle="bold"
            android:onClick="onClick"
            android:buttonTint="@color/colorAccent"
            android:text="@string/Answer_TentCamping" />

        <CheckBox
            android:id="@+id/CheckBoxButtonAnswerSurvivalCamping"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:textStyle="bold"
            android:onClick="onClick"
            android:buttonTint="@color/colorAccent"
            android:text="@string/Answer_SurvivalCamping" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingLeft="5dp"
            android:textSize="27sp"
            android:textStyle="bold"
            android:textColor="@color/textPrimaryColor"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:text="@string/Question_HowFarToTravel" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <Spinner
                android:id="@+id/SpinnerQuestionRegion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:layout_marginRight="80dp"
                android:layout_marginEnd="80dp"
                android:layout_marginLeft="80dp"
                android:layout_marginStart="80dp"
                android:background="@drawable/custom_spinner_background"/>

            <Spinner
                android:id="@+id/SpinnerQuestionStates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:layout_marginRight="80dp"
                android:layout_marginEnd="80dp"
                android:layout_marginLeft="80dp"
                android:layout_marginStart="80dp"
                android:background="@drawable/custom_spinner_background"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="70dp"
                android:paddingRight="70dp"
                android:paddingBottom="15dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/SeekBarMileDistance"

                    android:textSize="27sp"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>


                <SeekBar
                    android:id="@+id/SeekBarAboutDistance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:minWidth="300dp"

                    />

            </LinearLayout>





        </LinearLayout>

        <TextView
            android:id="@+id/TextViewMiles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:textSize="30sp"
            android:paddingLeft="10dp"
            android:text="@string/AnswerDisplayed_InMiles" />


        <Button
            android:id="@+id/buttonConfirmQuestionnaire"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/border_accent_color"
            android:onClick="onClick"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/White"
            android:layout_marginLeft="115dp"
            android:layout_marginBottom="30dp"
            android:text="@string/Button_ConfirmQuestionnaire" />



    </LinearLayout>
</ScrollView>